# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yaml
page_analyzer/: app.py
page_analyzer/templates/: index.html
