[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
flake8 = "^6.1.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
